// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem/> snap with capitalization 1`] = `
.c0 {
  word-break: break-all;
}

.c0 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 ul {
  list-style-type: disc;
  padding-left: 1.5rem;
}

.c0 ol {
  padding-left: 1.5rem;
}

.c0 blockquote {
  padding-left: 0.25rem;
  border-left: 5px solid lightgray;
}

.c0 blockquote > p {
  margin-bottom: 0rem;
}

.c0 blockquote:last-of-type > p {
  margin-bottom: 0.5rem;
}

.c0 p {
  margin-bottom: 0.5rem;
}

<div>
  <section
    className="cursor-pointer"
    onClick={[Function]}
    title="click to edit"
  >
    <div
      className="c0"
      onClick={undefined}
      title={undefined}
    >
      <p>
        Add 3 Tablespoons of tomato paste. Cook 1 minute.
      </p>
    </div>
  </section>
</div>
`;

exports[`<ListItem/> snap with capitalization 2`] = `
.c0 {
  word-break: break-all;
}

.c0 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 ul {
  list-style-type: disc;
  padding-left: 1.5rem;
}

.c0 ol {
  padding-left: 1.5rem;
}

.c0 blockquote {
  padding-left: 0.25rem;
  border-left: 5px solid lightgray;
}

.c0 blockquote > p {
  margin-bottom: 0rem;
}

.c0 blockquote:last-of-type > p {
  margin-bottom: 0.5rem;
}

.c0 p {
  margin-bottom: 0.5rem;
}

<div>
  <section
    className="cursor-pointer"
    onClick={[Function]}
    title="click to edit"
  >
    <div
      className="c0"
      onClick={undefined}
      title={undefined}
    >
      <p>
        Measure 1 teaspoon of rice vinegar.
      </p>
    </div>
  </section>
</div>
`;

exports[`<ListItem/> snap with capitalization 3`] = `
.c0 {
  word-break: break-all;
}

.c0 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 ul {
  list-style-type: disc;
  padding-left: 1.5rem;
}

.c0 ol {
  padding-left: 1.5rem;
}

.c0 blockquote {
  padding-left: 0.25rem;
  border-left: 5px solid lightgray;
}

.c0 blockquote > p {
  margin-bottom: 0rem;
}

.c0 blockquote:last-of-type > p {
  margin-bottom: 0.5rem;
}

.c0 p {
  margin-bottom: 0.5rem;
}

<div>
  <section
    className="cursor-pointer"
    onClick={[Function]}
    title="click to edit"
  >
    <div
      className="c0"
      onClick={undefined}
      title={undefined}
    >
      <p>
        Add 1 Tablespoon + 2 teaspoons of soy sauce.
      </p>
    </div>
  </section>
</div>
`;

exports[`<ListItem/> snap with capitalization 4`] = `
.c0 {
  word-break: break-all;
}

.c0 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 ul {
  list-style-type: disc;
  padding-left: 1.5rem;
}

.c0 ol {
  padding-left: 1.5rem;
}

.c0 blockquote {
  padding-left: 0.25rem;
  border-left: 5px solid lightgray;
}

.c0 blockquote > p {
  margin-bottom: 0rem;
}

.c0 blockquote:last-of-type > p {
  margin-bottom: 0.5rem;
}

.c0 p {
  margin-bottom: 0.5rem;
}

<div>
  <section
    className="cursor-pointer"
    onClick={[Function]}
    title="click to edit"
  >
    <div
      className="c0"
      onClick={undefined}
      title={undefined}
    >
      <p>
        Stir in 1 teaspoon salt
      </p>
    </div>
  </section>
</div>
`;
